fix: overlaps with modals

--- a/less/forum.less
+++ b/less/forum.less
@@ -72,7 +72,7 @@
     transform: none;
     box-shadow: none;
     top: 0;
-    z-index: var(--zindex-modal);
+    z-index: var(--zindex-header);
 
     &-header, &-body, &-footer, &-content {
       background-color: transparent;
